@@ -1,4 +1,24 @@
 * text=auto !eol
+create/data/images/Hub.png svneol=native#unset
+create/data/images/Hub_small.png svneol=native#unset
+create/data/images/Network.png svneol=native#unset
+create/data/images/Network_small.png svneol=native#unset
+create/data/images/Notebook.png svneol=native#unset
+create/data/images/Notebook_small.png svneol=native#unset
+create/data/images/Phone.png svneol=native#unset
+create/data/images/Phone_small.png svneol=native#unset
+create/data/images/Printer.png svneol=native#unset
+create/data/images/Printer_small.png svneol=native#unset
+create/data/images/Router.png svneol=native#unset
+create/data/images/Router_small.png svneol=native#unset
+create/data/images/Satellite.png svneol=native#unset
+create/data/images/Satellite_small.png svneol=native#unset
+create/data/images/Server.png svneol=native#unset
+create/data/images/Server_small.png svneol=native#unset
+create/data/images/UPS.png svneol=native#unset
+create/data/images/UPS_small.png svneol=native#unset
+create/data/images/Workstation.png svneol=native#unset
+create/data/images/Workstation_small.png svneol=native#unset
 frontends/php/audio/disaster_on.wav svneol=native#unset
 frontends/php/audio/warning_off.wav svneol=native#unset
 frontends/php/audio/warning_on.wav svneol=native#unset
